# cloak-sdk

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: demo.rs
crates/core/src/: address.rs  error.rs  keys.rs  lib.rs  scanner.rs  spend.rs  zk.rs
crates/program/: Cargo.toml
crates/program/src/: lib.rs  state.rs
relayer/: Cargo.toml
relayer/src/: main.rs
