[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/program",
    "cli",
    "relayer",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloakSDK/cloak"
description = "Cloak SDK - Privacy-preserving stealth addresses for Solana"

[workspace.dependencies]
# Elliptic curves - use versions compatible with solana-program
curve25519-dalek = { version = "3.2", features = ["u64_backend"] }
ed25519-dalek = "1.0"

# Solana - use stable 1.18 with Anchor 0.30
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
anchor-lang = "0.30"

# Hashing
sha2 = "0.10"

# Zero-knowledge proofs (Groth16 on BN254)
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
borsh = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"

# Utilities
rand = "0.7"
hex = "0.4"
dirs = "5.0"

[profile.release]
overflow-checks = true
