[package]
name = "cloak-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloak SDK - Privacy-preserving stealth addresses for Solana"
readme = "../../README.md"
keywords = ["solana", "stealth-address", "privacy", "cryptocurrency", "ecdh"]
categories = ["cryptography", "api-bindings"]
authors = ["CloakSDK <contact@cloaksdk.dev>"]

[dependencies]
# Elliptic curves
curve25519-dalek = { workspace = true }

# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
borsh = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Zero-knowledge proofs
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-snark = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }

# Utilities
rand = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }

# Async
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
